force-app/main/default/objects/custom_create57__c/custom_create57__c.object-meta.xml
<CustomObject>
    <label>Custom created object57</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects57</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>