force-app/main/default/objects/custom_create57__c/fields/custom_create_57field525__c.field-meta.xml
<CustomField>
    <fullName>custom_create_57field525__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 57field525</label>
    <type>Checkbox</type>
</CustomField>